syntax = "proto3";
package proto;
option go_package = "/proto";

message Host {
    string address = 1;
    optional string os_version = 2;
    optional string state = 3;
}

message PortVersion {
   optional string low_version = 1;
   optional string high_version = 2;
   optional string extra_infos = 3;
   optional string product = 4;
}

message Port {
    string port_id = 1;
    string protocol = 2;
    string state = 3;
    string service_name = 4;
    PortVersion version = 5;
}

message HostResult {
    Host host = 1;
    repeated Port ports = 2;
}

message ScannerResponse {
    repeated HostResult host_result = 1;
    string start_time = 2;
    string end_time = 3;
    string expiration_time = 4;
}

message ParamsScannerRequest {
    string hosts = 1;
    string ports = 2;
    bool with_aggressive_scan = 3;
    bool with_syn_scan = 4;
    bool with_null_scan = 5;
    bool service_version_detection = 6;
    bool os_detection = 7;
    bool service_default_scripts = 8;
    int32 timeout = 9;
    bool ping_only = 10;
    int32 retention_time = 11;
    bool fast_mode = 12;
}

message GetScannerRequest {
    string key = 1;
}

message ServerResponse{
    bool success = 1;
    string key = 2;
    ScannerResponse value = 3;
    string error = 4;
}

// Server ScannerService
service ScannerService {
    rpc StartScan(ParamsScannerRequest) returns (ServerResponse);
    rpc GetScan(GetScannerRequest) returns (ServerResponse);
    rpc DeleteScan(GetScannerRequest) returns (ServerResponse);
}
